Changes in 3.3.10
YYYY-MM-DD

- Bug fixes / improvements
    - Throw a ParseException on missing chars from HEXWKB string (#675)

Changes in 3.3.9
2013-09-04

- Bug fixes / improvements
    - Fix OffsetCurve op in presence of duplicated vertices (#602)
    - Fix LineSegmentVisitor copy ctor (#636)
    - Fix area boundary return from GEOSPointOnSurface (#623)
    - Speedup GEOSWKBReader_read (#621)
    - Fix RobustLineIntersector handling of invalid intersection points (#622)
    - Reduce likelyhood of invalid output from snap operation (#629, #501)
    - Reduce memory fragmentation of prepared Polygon/Point intersection op
    - Fix mingw64 compile (#630)
    - Fix bug in HotPixel constructor (#635)
    - Fix install location of linearref headers (#624)
    - Fix multi-geometry constructor to drop SRID from components (#583)

Changes in 3.3.8
2013-02-28

- Bug fixes / improvements
    - IsValidOp: throw proper error on nested shells (#608)
    - Fix header guards (#617, #618, #619)
    - WKTWriter::appendCoordinate optimisation
    - Fix centroid computation for collections with empty components (#582)

Changes in 3.3.7
2013-01-22 

- Bug fixes / improvements
    - Fix abort in RightmostEdgeFinder (#605)
    - Do not force precision reduction below 6 significant digits
      while trying to obtain a valid Buffer output (#605)
    - Fix GEOSPointOnSurface with zero-length linestring (#609)
    - Fix EMPTY return from zero-area polygon (#613)
    - Segfault from symdifference (#615)

Changes in 3.3.6
2012-11-15 -- that's Post-GIS day !

- Bug fixes / improvements
    - Add support for testing with phpunit 3.6 (not loosing support for 3.4)
    - Segfault from intersection (#586, #598, #599)

Changes in 3.3.5
2012-06-25

- Bug fixes / improvements
    - Correctly increment CAPI lib version from 3.3.3 (#558)
    - Port robustness fix to CentroidArea (#559)
    - Always return POINT from GEOSGetCentroid, even for EMPTY (#560)